# GangstaPatch

./: CMakeLists.txt  GangstaPatch.sln  readme.md
.github/workflows/: main.yml
GangstaPatch/: GangstaPatch.vcxproj  GangstaPatch.vcxproj.filters  Includes.hh  dllmain.cc
GangstaPatch/Core/: Hooks.hh  Patcher.cc  Patcher.hh  Settings.hh
GangstaPatch/Core/Hooks/Game/: Registry.cc
GangstaPatch/Core/Hooks/GameObject/: ControllerInput.cc
GangstaPatch/Core/Hooks/P3D/: OceanRenderer.cc  VehicleShader.cc
GangstaPatch/Core/Hooks/Script/: ListScreenResolutionEntries.cc
GangstaPatch/Hooks/: Registry.hh
GangstaPatch/Hooks/pure3d/: D3DDisplay.hh  OceanRenderer.hh  VehicleShader.hh
GangstaPatch/Hooks/script/: ListScreenResolutionEntries.hh
GangstaPatch/NakedFunctions/: GetBarrelCreepSideMax.hh  WindowedBorderless.hh
GangstaPatch/Shader/: VehicleDamage.hh  VehicleGlass.hh
